Adde background to code area, added buttons to compile code

--- a/level_1.html
+++ b/level_1.html
@@ -14,12 +14,10 @@
         </canvas>
     </div>
 
-    <div id="user-interface">
-        <div id="line_counter">
-
-        </div>
-        <textarea id="code">#Write you code here</textarea>
-        <button id="run" onclick="Run()"> Run </button>
+    <div id="code-area">
+        <textarea id="code">/*Write you code here*/</textarea>
+        <img id="run" class="controls" onclick="Run()" src="../ProjectDiplom/assets/Images/Execute.png"/>
+        <img id="stop" class="controls" onclick="Run()" src="../ProjectDiplom/assets/Images/Execute.png"/>
     </div>
 </div>
 
