--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <script src="assets/scripts/scrollers.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
+    <script src="/src/scrollers.js"></script>
 </head>
 <body>
 <header>
