--- a/client/level_1.html
+++ b/client/level_1.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/css/level_1.css">
-    <script src="/src/CompilePlayerCode.js"></script>
-    <script src="/src/game.js"></script>
+    <script src="socket.io-client/dist/socket.io.js"></script>
 </head>
 <body>
 
@@ -28,4 +27,5 @@
 </div>
 
 </body>
+<script src="/src/game.js"></script>
 </html>
