L5 in progress, correct player moving.

--- a/client/level_1.html
+++ b/client/level_1.html
@@ -7,7 +7,6 @@
     <script src="socket.io-client/dist/socket.io.js"></script>
 </head>
 <body>
-
 <div id="main-screen">
     <div id="canvas-wrapper">
         <canvas id="game">
@@ -27,5 +26,5 @@
 </div>
 
 </body>
-<script src="/src/game.js"></script>
+<script src="/src/game.js"></script>-->
 </html>
