Added custom signIn

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <script src="/src/scrollers.js"></script>
 </head>
 <body>
