--- a/client/level_1.html
+++ b/client/level_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/css/level_1.css">
+    <link rel="stylesheet" href="/stylesheets/level_1.css">
     <script src="socket.io-client/dist/socket.io.js"></script>
 </head>
 <body>
@@ -26,5 +26,5 @@
 </div>
 
 </body>
-<script src="/src/game.js"></script>-->
+<script src="/src/game.js"></script>
 </html>
