--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/index.css">
     <script src="/src/scrollers.js"></script>
 </head>
 <body>
@@ -18,25 +18,25 @@
         <div class = "portal level_1">
             <div class="level-label">
                 <h2 class = "level-name">Level - 1</h2>
-                <a class="btn-play" src="/">Play</a>
+                <a class="btn-play" href="/level_1">Play</a>
             </div>
         </div>
         <div class = "portal level_2">
             <div class="level-label">
                 <h2 class = "level-name">Level - 2</h2>
-                <a class="btn-play" src="/">Play</a>
+                <a class="btn-play" href="/level_2">Play</a>
             </div>
         </div>
         <div class = "portal level_3">
             <div class="level-label">
                 <h2 class = "level-name">Level - 3</h2>
-                <a class="btn-play" src="/">Play</a>
+                <a class="btn-play" href="/">Play</a>
             </div>
         </div>
         <div class = "portal level_4">
             <div class="level-label">
                 <h2 class = "level-name">Level - 4</h2>
-                <a class="btn-play" src="/">Play</a>
+                <a class="btn-play" href="/">Play</a>
             </div>
         </div>
     </div>
