--- a/client/level_1.html
+++ b/client/level_1.html
@@ -9,7 +9,7 @@
 <body>
 <div id="main-screen">
     <div id="canvas-wrapper">
-        <canvas id="game">
+        <canvas id="game" width="500" height="500">
 
         </canvas>
     </div>
