Added Client part and pages for level_1 and PVP

--- a/client/selectLevel.html
+++ b/client/selectLevel.html
@@ -20,7 +20,7 @@
         <div class = "portal" id="level_1">
             <div class="level-label">
                 <h2 class = "level-name">Level - 1</h2>
-                <a class="btn-play" href="/level_1">Play</a>
+                <a class="btn-play" href="/level_PVP">Play</a>
             </div>
         </div>
         <div class = "portal" id="level_2">
