--- a/client/level_1.html
+++ b/client/level_1.html
@@ -9,22 +9,22 @@
 <body>
 <div id="main-screen">
     <div id="canvas-wrapper">
-        <canvas id="game" width="750" height="750">
+        <canvas id="game" width="1250" height="750">
 
         </canvas>
     </div>
 
-    <div id="tips">
-
+    <div id="code-area">
+        <textarea id="code"></textarea>
+        <!--<img id="run" class="controls" onclick="Run()"/>-->
+        <!--<img id="stop" class="controls" onclick="Run()"/>-->
     </div>
 
-    <div id="code-area">
-        <textarea id="code">/*Write you code here*/</textarea>
-        <img id="run" class="controls" onclick="Run()" src="/assets/Execute.png"/>
-        <img id="stop" class="controls" onclick="Run()" src="/assets/Execute.png"/>
+    <div id="tips">
     </div>
 </div>
 
 </body>
+<script src="/src/maps.js"></script>
 <script src="/src/gameSingle.js"></script>
 </html>
