Added new auth page (not completed)

--- a/client/level_1.html
+++ b/client/level_1.html
@@ -16,11 +16,11 @@
 
     <div id="code-area">
         <textarea id="code"></textarea>
-        <!--<img id="run" class="controls" onclick="Run()"/>-->
-        <!--<img id="stop" class="controls" onclick="Run()"/>-->
+        <div id="btn-execute" class="controls" onclick="Run()">EXECUTE</div>
     </div>
 
     <div id="tips">
+        <div id="label_tips_task" onclick="Run()">TASK AND TIPS</div>
     </div>
 </div>
 
