--- a/client/login.html
+++ b/client/login.html
@@ -8,13 +8,34 @@
 </head>
 <body>
 
+<div id="introduce">
+    <div id = 'row_1-2'>
+        <h1>WELCOME</h1>
+        <h2 id="row_2">We are happy to greet you in CodeTrollRush World!</h2>
+    </div>
+
+    <div class="row_3" id="row_3_left">
+        <h2>If you are a foreign Troll,
+            please pass to the registration
+            room and you will be given
+            a password of you world.</h2>
+    </div>
+
+    <div class="row_3" id="row_3_right">
+        <h2>And if you have a Troll Passport
+            of CodeTrollRush World,
+            then enter your data in the
+            fields below for a check-in.</h2>
+    </div>
+</div>
+
 <div id="authForm">
     <div class="form_row">
-        <input id="signin_email" type="text" placeholder="email">
+        <input id="signin_email" type="text" placeholder="">
     </div>
 
     <div class="form_row">
-        <input id="signin_password" type="password" placeholder="password">
+        <input id="signin_password" type="password" placeholder="">
     </div>
 
     <button  class="form_btn" id="btn_signup"></button>
@@ -22,23 +43,23 @@
     <button  class="form_btn" id="btn_login"></button>
 </div>
 
-<div id="regForm">
-    <div class="form_row">
-        <input id="reg_email" type="text" placeholder="email">
-    </div>
+<!--<div id="regForm">-->
+    <!--<div class="form_row">-->
+        <!--<input id="reg_email" type="text" placeholder="email">-->
+    <!--</div>-->
 
-    <div class="form_row">
-        <input id="reg_login" type="password" placeholder="login">
-    </div>
+    <!--<div class="form_row">-->
+        <!--<input id="reg_login" type="password" placeholder="login">-->
+    <!--</div>-->
 
-    <div class="form_row">
-        <input id="reg_password" type="password" placeholder="password">
-    </div>
+    <!--<div class="form_row">-->
+        <!--<input id="reg_password" type="password" placeholder="password">-->
+    <!--</div>-->
 
-    <button  class="form_btn" id="reg_btn_signup"></button>
+    <!--<button  class="form_btn" id="reg_btn_signup"></button>-->
 
-    <button  class="form_btn" id="reg_btn_signin"></button>
-</div>
+    <!--<button  class="form_btn" id="reg_btn_signin"></button>-->
+<!--</div>-->
 
 </body>
 <script src="/src/auth.js"></script>
