Added new auth page (90% completed)

--- a/client/login.html
+++ b/client/login.html
@@ -8,30 +8,36 @@
 </head>
 <body>
 
-<div id="introduce">
+<div id="authForm">
     <div id = 'row_1-2'>
         <h1>WELCOME</h1>
         <h2 id="row_2">We are happy to greet you in CodeTrollRush World!</h2>
     </div>
 
     <div class="row_3" id="row_3_left">
-        <h2>If you are a foreign Troll,
-            please pass to the registration
-            room and you will be given
-            a password of you world.</h2>
+        <p>If you are a foreign Troll,</p>
+        <p>please pass to the registration</p>
+        <p>room and you will be given<p>
+        <p>a password of you world.</p>
     </div>
 
     <div class="row_3" id="row_3_right">
-        <h2>And if you have a Troll Passport
-            of CodeTrollRush World,
-            then enter your data in the
-            fields below for a check-in.</h2>
+        <p>And if you have a Troll Passport</p>
+        <p>of CodeTrollRush World,</p>
+        <p>then enter your data in the</p>
+        <p>fields below for a check-in.</p>
     </div>
-</div>
 
-<div id="authForm">
+    <div class="row_4_5" id="row_4_right">
+        <p id="login_label" class="labels">Nickname/Email:</p>
+    </div>
+
     <div class="form_row">
         <input id="signin_email" type="text" placeholder="">
+    </div>
+
+    <div class="row_4_5" id="row_5_right">
+        <p id="password_label" class="labels">Password:</p>
     </div>
 
     <div class="form_row">
@@ -39,9 +45,10 @@
     </div>
 
     <button  class="form_btn" id="btn_signup"></button>
-
     <button  class="form_btn" id="btn_login"></button>
 </div>
+
+<div id="background"></div>
 
 <!--<div id="regForm">-->
     <!--<div class="form_row">-->
