MVP for Troynina

--- a/client/level_1.html
+++ b/client/level_1.html
@@ -26,5 +26,6 @@
 
 </body>
 <script src="/src/maps.js"></script>
+<script src="/src/CompilePlayerCode.js"></script>
 <script src="/src/gameSingle.js"></script>
 </html>
