--- a/client/selectLevel.html
+++ b/client/selectLevel.html
@@ -19,25 +19,25 @@
     <div class = "portals">
         <div class = "portal" id="level_1">
             <div class="level-label">
-                <h2 class = "level-name">Level - 1</h2>
+                <h2 class = "level-name">PVP_Mode</h2>
                 <a class="btn-play" href="/level_PVP">Play</a>
             </div>
         </div>
         <div class = "portal" id="level_2">
             <div class="level-label">
-                <h2 class = "level-name">Level - 2</h2>
-                <a class="btn-play" href="/level_2">Play</a>
+                <h2 class = "level-name">Level - 1</h2>
+                <a class="btn-play" href="/level_1">Play</a>
             </div>
         </div>
         <div class = "portal" id="level_3">
             <div class="level-label">
-                <h2 class = "level-name">Level - 3</h2>
+                <h2 class = "level-name">Level - 2</h2>
                 <a class="btn-play" href="/">Play</a>
             </div>
         </div>
         <div class = "portal" id="level_4">
             <div class="level-label">
-                <h2 class = "level-name">Level - 4</h2>
+                <h2 class = "level-name">Level - 3</h2>
                 <a class="btn-play" href="/">Play</a>
             </div>
         </div>
