Added pre release version of Level_1

--- a/client/level_1.html
+++ b/client/level_1.html
@@ -26,6 +26,7 @@
 
 </body>
 <script src="/src/maps.js"></script>
+<script src="/src/tooltips.js"></script>
 <script src="/src/CompilePlayerCode.js"></script>
 <script src="/src/gameSingle.js"></script>
 </html>
