Jumps and objects

--- a/client/selectLevel.html
+++ b/client/selectLevel.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/stylesheets/index.css">
     <script src="/src/scrollers.js"></script>
     <script src="/src/cookieWorker.js"></script>
-    <script src="/src/isAuthorized.js"></script>
+    <!--<script src="/src/isAuthorized.js"></script>-->
 </head>
 <body>
 <header>
