Improve tooltips design (added textarea)

--- a/client/level_1.html
+++ b/client/level_1.html
@@ -52,6 +52,7 @@
     </div>
 </div>
 <div class="tooltip">
+    <textarea id="tooltipText" class="tooltip"></textarea>
     <div id="btn_tooltip_n" class="tooltip btnTooltip controls">NEXT</div>
     <div id="btn_tooltip_p" class="tooltip btnTooltip controls">BACK</div>
 </div>
@@ -62,9 +63,9 @@
 </script>
 </body>
 <script src="/src/maps.js"></script>
+<!--<script src="/src/tooltips.js"></script>-->
 <script src="/src/gameSingle.js"></script>
 <script src="/src/maps.js"></script>
-<script src="/src/tooltips.js"></script>
 <script src="/src/CompilePlayerCode.js"></script>
 <script src="/src/timer.js"></script>
 </html>
