Improve single game mode, added tips and tasks, added new tip menu

--- a/client/level_1.html
+++ b/client/level_1.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="/stylesheets/level_1_test.css">
     <script src="socket.io-client/dist/socket.io.js"></script>
+    <script src="/src/CompilePlayerCode.js"></script>
 </head>
 <body>
 <div id="grid">
@@ -43,15 +44,16 @@
             </div>
 
             <div id="tips">
+                <textarea id="tipsTextarea" readonly></textarea>
                 <div id="label_tips_task" onclick="Run()">TASK AND TIPS</div>
             </div>
 
         <div>
-            <div id="btn-execute" class="controls" onclick="Run()">EXECUTE</div>
+            <div id="btn-execute" class="controls">EXECUTE</div>
         </div>
     </div>
 </div>
-<div class="tooltip">
+<div id="tooltip" class="tooltip">
     <textarea id="tooltipText" class="tooltip"></textarea>
     <div id="btn_tooltip_n" class="tooltip btnTooltip controls">NEXT</div>
     <div id="btn_tooltip_p" class="tooltip btnTooltip controls">BACK</div>
@@ -66,6 +68,5 @@
 <!--<script src="/src/tooltips.js"></script>-->
 <script src="/src/gameSingle.js"></script>
 <script src="/src/maps.js"></script>
-<script src="/src/CompilePlayerCode.js"></script>
 <script src="/src/timer.js"></script>
 </html>
